--- a/style/food.css
+++ b/style/food.css
@@ -1,3 +1,34 @@
+@keyframes moveLeft {
+	0%{
+		opacity:0;
+		transform: translateX(-100px);
+
+	}
+	80% {
+		transform: translateX(20px);
+	}
+	100% {
+		opacity:1;
+		transform: translateX(0);
+	}
+
+}
+
+@keyframes moveRight {
+	0%{
+		opacity:0;
+		transform: translateX(100px);
+	}
+	80% {
+		transform: translateX(-20px);
+	}
+	100%{
+		opacity: 1;
+		transform: translateX(0);
+	}
+
+
+}
 
 * {
 	margin:0;
@@ -47,6 +78,8 @@ body {
 	font-size: 60px;
 	letter-spacing: 30.1px;
 	font-weight: 400;
+	animation-name: moveLeft;
+	animation-duration: 1s;
 
 }
 
@@ -55,6 +88,8 @@ body {
 	font-size: 20px;
 	font-weight: 700;
 	letter-spacing: 15.4px;
+	animation-name: moveRight;
+	animation-duration: 1s;
 }
 
 .text-box {
