--- a/style/food.css
+++ b/style/food.css
@@ -5,7 +5,7 @@
 
 	}
 	80% {
-		transform: translateX(20px);
+		transform: translateX(15px);
 	}
 	100% {
 		opacity:1;
@@ -20,14 +20,24 @@
 		transform: translateX(100px);
 	}
 	80% {
-		transform: translateX(-20px);
+		transform: translateX(-15px);
 	}
 	100%{
 		opacity: 1;
 		transform: translateX(0);
 	}
+}
 
-
+@keyframes moveBtn {
+	0%{
+		opacity:0;
+		transform: translateY(50px);
+	}
+	
+	100%{
+		opacity: 1;
+		transform: translate(0);
+	}
 }
 
 * {
@@ -71,25 +81,28 @@ body {
 	color: #fff;
 	text-transform: uppercase;
 
+	backface-visibility: hidden;
+
 }
 
 .heading-pmain {
 	display: block;
 	font-size: 60px;
-	letter-spacing: 30.1px;
+	letter-spacing: 20.1px;
 	font-weight: 400;
 	animation-name: moveLeft;
 	animation-duration: 1s;
-
+	animation-timing-function: ease-out;
 }
 
 .heading-smain {
 	display: block;
 	font-size: 20px;
 	font-weight: 700;
-	letter-spacing: 15.4px;
+	letter-spacing: 11.4px;
 	animation-name: moveRight;
 	animation-duration: 1s;
+	animation-timing-function: ease-out;
 }
 
 .text-box {
@@ -97,7 +110,63 @@ body {
 	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
 }
+
+.btn:link,
+.btn:visited {
+	text-transform: uppercase;
+	text-decoration: none;
+	margin-top: 25px;
+	padding: 10px 30px;
+	display: inline-block;
+	border-radius: 100px;
+	transition: all .2s;
+	position: relative;
+}
+.btn:hover {
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white {
+	background-color: #fff;
+	color: #777;
+}
+
+.btn-animate {
+	animation: moveBtn .5s ease-out .75s;
+	animation-fill-mode: backwards;
+ }
+
+.btn::after {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	border-radius: 100px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	transition: all .4s;
+}
+
+.btn-white::after {
+   background-color: #fff;
+}
+
+.btn:hover::after{
+	transform: scaleX(1.1) scaleY(1.4);
+	opacity: 0;
+}
+
+
 
 .menu {
 	color:blue;
