--- a/style/food.css
+++ b/style/food.css
@@ -177,8 +177,8 @@ body {
 	border-style:solid;
 	border-width: 2px;
 	border-color: rgba(191, 107, 134, 0.5);
-	height: 150px;
-	width: 245px;
+	height: 120px;
+	width: auto;
 	padding: 7px;
 }
 
