--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,10 @@ $color-primary: #cc1d54
 $color-light: #bf6b86
 $color-dark: #82072e
 
+$color-grey-dark: #777;
+$color-white: #fff;
+$color-black: #000;
+
 
 @keyframes moveLeft {
 	0%{
