--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,20 @@
-$color-primary: #cc1d54
-$color-light: #bf6b86
-$color-dark: #82072e
+
+// Colors
+$color-primary: #cc1d54;
+$color-light: #bf6b86;
+$color-dark: #82072e;
 
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+$color-red-light: #bf6b86;
+$color-red-mid: #cc1d54;
+$color-red-dark: #82072e;
+
+// grid
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 4rem;
+
