--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ body {
   background-color: #bf6b86;
   margin: 0 auto; }
   .row:not(:last-child) {
-    margin-bottom: 8rem; }
+    margin-bottom: 6rem; }
   .row::after {
     content: "";
     display: table;
@@ -137,11 +137,19 @@ body {
     background-color: orange;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 4rem; }
+      margin-right: 2rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 4rem) / 2); }
+    width: calc((100% - 2rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% -2 * 4rem) / 3); }
+    width: calc((100% -2 * 2rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% -2 * 2rem) / 3) + 2rem); }
+  .row .col-1-of-4 {
+    width: calc((100% -3 * 2rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% -3 * 2rem) / 4) + 2rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% -3 * 2rem) / 4) + 2 * 2rem); }
 
 .text-box {
   position: absolute;
