--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,26 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out; }
 
+.heading-secondary {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #82072e, #bf6b86);
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.1rem 1rem 2rem rgba(130, 7, 46, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-4 {
+  margin-bottom: 4rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -125,8 +145,8 @@ body {
 
 .row {
   max-width: 114rem;
-  background-color: #bf6b86;
-  margin: 0 auto; }
+  margin: 0 auto;
+  text-align: center; }
   .row:not(:last-child) {
     margin-bottom: 6rem; }
   .row::after {
@@ -134,7 +154,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orange;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 2rem; }
@@ -150,6 +169,11 @@ body {
     width: calc(2 * ((100% - 3 * 2rem) / 4) + 2rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
+
+.section-about {
+  background-color: #f5d0dc;
+  padding: 10rem 0;
+  margin-top: -10vh; }
 
 .text-box {
   position: absolute;
