--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-black: #000;
 $color-red-light: #bf6b86;
 $color-red-mid: #cc1d54;
 $color-red-dark: #82072e;
+$color-pink-light: #f5d0dc;
 
 // grid
 
