--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -36,3 +36,21 @@ body {
 	animation-timing-function: ease-out;
 	}
 }
+
+.heading-secondary{
+	font-size: 2.5rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	background-image: linear-gradient(to right, $color-red-dark, $color-red-light);
+	display: inline-block;
+	-webkit-background-clip: text;
+	color: transparent;
+	letter-spacing: 2px;
+	transition: all .2s;
+
+	&:hover {
+		transform: skewY(2deg) skewX(15deg) scale(1.1);
+		text-shadow: .1rem 1rem 2rem rgba($color-dark, .2);
+
+	}
+}
