--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -2,6 +2,13 @@
 	text-align: center;
 }
 
-.u-margin-bottom-4{
+
+.u-margin-bottom-small{
+	margin-bottom: 1rem;
+}
+.u-margin-bottom-medium{
+	margin-bottom: 2rem;
+}
+.u-margin-bottom-big{
 	margin-bottom: 4rem;
 }
