--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/typography";
 @import "base/utility";
 
+@import "components/composition";
 @import "components/button";
 
 @import "layout/header";
