--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@
 
 @import "components/composition";
 @import "components/button";
+@import "components/feature-box";
+
 
 @import "layout/header";
 @import "layout/grid";
