--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,22 @@
 .section-about{
 	background-color: $color-pink-light;
-	padding: 10rem 0;
+	padding: 10rem 3rem;
 	margin-top: -10vh;
+};
+
+.section-feature{
+	padding: 12em 3rem;
+	background-image: linear-gradient(to right bottom, 
+	rgba(191, 107, 134, 0.5), 
+	rgba(204, 29, 84, 0.5)),
+	url(../img/dogs.jpg);
+	background-size: cover;
+	margin-top: -5rem;
+
+	transform: skewY(3deg);
+
+	& > * {
+	transform: skewY(-3deg);
+
+	}
 };
