--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,11 @@ body {
   .section-feature > * {
     transform: skewY(-3deg); }
 
+.section-dishes {
+  background-color: #f5d0dc;
+  padding: 10rem 0;
+  margin-top: -10vh; }
+
 .text-box {
   position: absolute;
   top: 40%;
