--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,4 +19,10 @@
 	transform: skewY(-3deg);
 
 	}
-};
+}
+
+.section-dishes{
+	background-color: $color-pink-light;
+	padding: 10rem 0;
+	margin-top: -10vh;
+}
