--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,12 @@ $color-primary: #cc1d54;
 $color-light: #bf6b86;
 $color-dark: #82072e;
 
+$color-secondary-light:#c491eb;
+$color-secondary-dark:#642694;
+
+$color-tertiary-light:#f76d6d;
+$color-tertiary-dark:#ba0202;
+
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
