--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,7 @@
 	background-size: cover;
 	background-position: center;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
 	position: relative;
 }
 
