--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -32,6 +32,14 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark);
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
         }
     }
 
@@ -61,10 +69,12 @@
             url(../img/salads.jpg);
         }
         &--2 {
-            background-image: url(../img/shakes.jpg);
+            background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark),
+            url(../img/shakes.jpg);
         }
         &--3 {
-            background-image: url(../img/shakes.jpg);
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+            url(../img/pizza.jpg);
         }
     }
 
@@ -75,7 +85,7 @@
         text-align: right;
         position: absolute;
         top: 12rem;
-        right: 4rem;
+        right: 2rem;
         text-transform: uppercase;
         width: 75%;
     }
@@ -89,6 +99,18 @@
             background-image:linear-gradient(to right bottom, 
             rgba($color-secondary-light, .85), 
             rgba($color-secondary-dark, .85));
+        }
+
+        &-2 {
+            background-image:linear-gradient(to right bottom, 
+            rgba($color-red-light, .85), 
+            rgba($color-red-dark, .85));
+        }
+
+        &-3 {
+            background-image:linear-gradient(to right bottom, 
+            rgba($color-tertiary-light, .85), 
+            rgba($color-tertiary-dark, .85));
         }
     }
 
