--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -129,7 +129,7 @@
                 padding: 1rem;
 
                 &:not(:last-child){
-                    border-bottom: 1px solid $color-secondary-dark;
+                    border-bottom: 1px solid $color-pink-light;
 
                 }
             }
