--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ body {
         font-size: 1.5rem;
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
-          border-bottom: 1px solid #642694; }
+          border-bottom: 1px solid #f5d0dc; }
   .card__cta {
     position: absolute;
     top: 50%;
