--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,9 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 4rem; }
 
+.u-margin-top-big {
+  margin-top: 4rem; }
+
 .composition {
   position: relative; }
   .composition_photo {
@@ -152,6 +155,12 @@ body {
   background-color: #fff;
   color: #777; }
   .btn-white::after {
+    background-color: #fff; }
+
+.btn-red {
+  background-color: #cc1d54;
+  color: #fff; }
+  .btn-red::after {
     background-color: #fff; }
 
 .btn-animate {
@@ -247,7 +256,9 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #c491eb, #642694), url(../img/salads.jpg); }
     .card__picture--2 {
@@ -364,7 +375,7 @@ body {
 
 .section-dishes {
   background-color: #f5d0dc;
-  padding: 10rem 0 50rem 0;
+  padding: 10rem 0 8rem 0;
   margin-top: -10vh; }
 
 .text-box {
