--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -32,6 +32,15 @@
 		}
 	}
 
+
+	&-red {
+		background-color: $color-primary;
+		color:$color-white;
+			&::after {
+			   background-color: #fff;
+			}
+		}
+
 	&-animate {
 	animation: moveBtn .5s ease-out .75s;
 	animation-fill-mode: backwards;
