--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $color-tertiary-dark:#ba0202;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+$color-grey-light:#fff7f9;
 
 $color-red-light: #bf6b86;
 $color-red-mid: #cc1d54;
