--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,42 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block;
+  transition: all .3s; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #c491eb; }
+  .form__input:focus:invalid {
+    border-bottom: 3px solid #cc1d54; }
+  .form__input::-webkit-input-placeholder {
+    color: #777; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: inline-block;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)), url(../img/ffood.jpg);
@@ -441,6 +477,20 @@ body {
 .section-stories {
   padding: 6rem 0;
   position: relative; }
+
+.section-reserve {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #bf6b86, #82072e); }
+
+.reserve {
+  background-image: linear-gradient(108deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 55%, transparent 55%), url(../img/fries.jpg);
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+  height: 50rem; }
+  .reserve__form {
+    width: 50%;
+    padding: 6rem; }
 
 .text-box {
   position: absolute;
