--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,3 +32,27 @@
 	padding: 6rem 0;
 	position: relative;
 }
+
+
+.section-reserve {
+	padding: 15rem 0;
+	background-image: linear-gradient(to right bottom, $color-light, $color-dark);
+	}
+
+.reserve {
+	background-image: linear-gradient(108deg,
+									   rgba($color-white, .8) 0%,
+									   rgba($color-white, .7) 55%,
+									   transparent 55%) ,				
+	 								   url(../img/fries.jpg);
+	background-size: cover;
+	border-radius: 3px;
+	box-shadow: 0 1.5rem 4rem rgba($color-black, .5);
+
+	height: 50rem;
+
+	&__form {
+		width: 50%;
+		padding: 6rem;
+	}
+}
