--- a/css/style.css
+++ b/css/style.css
@@ -89,19 +89,19 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-top-big {
-  margin-top: 4rem; }
+  margin-top: 4rem !important; }
 
 .composition {
   position: relative; }
@@ -130,7 +130,7 @@ body {
   .composition:hover .composition_photo:not(:hover) {
     transform: scale(0.9); }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   margin-top: 25px;
@@ -138,7 +138,9 @@ body {
   display: inline-block;
   border-radius: 100px;
   transition: all .2s;
-  position: relative; }
+  position: relative;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -147,7 +149,8 @@ body {
     transform: scaleX(1.1) scaleY(1.4);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
 
@@ -411,6 +414,47 @@ body {
   visibility: hidden;
   transform: translateY(-4rem); }
 
+.form__radio-group {
+  width: 47%;
+  display: inline-block;
+  padding: 0 3rem; }
+
+.form__radio-input {
+  display: none; }
+
+.form__radio-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 3.2rem; }
+
+.form__radio-button {
+  height: 2.4rem;
+  width: 2.4rem;
+  border: 5px solid #cc1d54;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  right: 1rem;
+  top: -.4rem; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: 1.4rem;
+    width: 1.4rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #cc1d54;
+    opacity: 0;
+    transition: opacity .2s; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)), url(../img/ffood.jpg);
@@ -479,14 +523,14 @@ body {
   position: relative; }
 
 .section-reserve {
-  padding: 15rem 0;
+  padding: 11rem 3rem;
   background-image: linear-gradient(to right bottom, #bf6b86, #82072e); }
 
 .reserve {
   background-image: linear-gradient(108deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 55%, transparent 55%), url(../img/fries.jpg);
   background-size: cover;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
   height: 50rem; }
   .reserve__form {
     width: 50%;
