--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,68 +1,75 @@
 .btn {
+	&,
 	&:link,
 	&:visited {
-	text-transform: uppercase;
-	text-decoration: none;
-	margin-top: 25px;
-	padding: 10px 30px;
-	display: inline-block;
-	border-radius: 100px;
-	transition: all .2s;
-	position: relative;
+		text-transform: uppercase;
+		text-decoration: none;
+		margin-top: 25px;
+		padding: 10px 30px;
+		display: inline-block;
+		border-radius: 100px;
+		transition: all .2s;
+		position: relative;
+
+		border: none;
+		cursor: pointer;
 	}
+
 	&:hover {
-	transform: translateY(-3px);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
-		&::after{
-		transform: scaleX(1.1) scaleY(1.4);
-		opacity: 0;
+		transform: translateY(-3px);
+		box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+		&::after {
+			transform: scaleX(1.1) scaleY(1.4);
+			opacity: 0;
 		}
 	}
 
-	&:active {
-	transform: translateY(-1px);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+	&:active,
+	&:focus {
+		outline: none;
+		transform: translateY(-1px);
+		box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 	}
 
 	&-white {
-	background-color: #fff;
-	color: #777;
+		background-color: #fff;
+		color: #777;
 		&::after {
-   		background-color: #fff;
+			background-color: #fff;
 		}
 	}
-
 
 	&-red {
 		background-color: $color-primary;
-		color:$color-white;
-			&::after {
-			   background-color: #fff;
-			}
+		color: $color-white;
+		// padding: 20px 35px;
+		&::after {
+			background-color: #fff;
 		}
+	}
 
 	&-animate {
-	animation: moveBtn .5s ease-out .75s;
-	animation-fill-mode: backwards;
- 	}
+		animation: moveBtn .5s ease-out .75s;
+		animation-fill-mode: backwards;
+	}
 
 	&::after {
-	content: "";
-	display: inline-block;
-	height: 100%;
-	width: 100%;
-	border-radius: 100px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	transition: all .4s;
+		content: "";
+		display: inline-block;
+		height: 100%;
+		width: 100%;
+		border-radius: 100px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		transition: all .4s;
 	}
 }
 
-.btn-text{
+.btn-text {
 	&:link,
-	&:visited{
+	&:visited {
 		font-size: $default-font-size;
 		color: $color-primary;
 		display: inline-block;
@@ -72,16 +79,15 @@
 		transition: all .2s;
 	}
 
-	&:hover{
+	&:hover {
 		background-color: $color-primary;
 		color: $color-white;
 		box-shadow: 0 1rem 2rem rgba($color-black, .15);
 		transform: translateY(-2px);
 	}
 
-	&:active{
+	&:active {
 		box-shadow: 0 0.5rem 1rem rgba($color-black, .15);
 		transform: translateY(0px);
 	}
-
 }
