--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -41,7 +41,7 @@
 	border-radius: 3px;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, .6);
 
-	height: 60rem;
+	// height: 60rem;
 
 	&__form {
 		width: 50%;
