--- a/css/style.css
+++ b/css/style.css
@@ -429,8 +429,8 @@ body {
   padding-left: 3.2rem; }
 
 .form__radio-button {
-  height: 2.4rem;
-  width: 2.4rem;
+  height: 2rem;
+  width: 2rem;
   border: 5px solid #cc1d54;
   border-radius: 50%;
   display: inline-block;
@@ -441,8 +441,8 @@ body {
   .form__radio-button::after {
     content: "";
     display: block;
-    height: 1.4rem;
-    width: 1.4rem;
+    height: 1rem;
+    width: 1rem;
     border-radius: 50%;
     position: absolute;
     top: 50%;
@@ -530,8 +530,7 @@ body {
   background-image: linear-gradient(108deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 55%, transparent 55%), url(../img/fries.jpg);
   background-size: cover;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
-  height: 50rem; }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6); }
   .reserve__form {
     width: 50%;
     padding: 6rem; }
