--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,12 @@ body {
   .btn-red::after {
     background-color: #fff; }
 
+.btn-dark-red {
+  background-color: #82072e;
+  color: #fff; }
+  .btn-dark-red::after {
+    background-color: #fff; }
+
 .btn-animate {
   animation: moveBtn .5s ease-out .75s;
   animation-fill-mode: backwards; }
@@ -183,7 +189,7 @@ body {
   transition: all .4s; }
 
 .btn-text:link, .btn-text:visited {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   color: #cc1d54;
   display: inline-block;
   text-decoration: none;
@@ -326,7 +332,7 @@ body {
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   transform: skewX(-12deg); }
   .story__shape {
     width: 15rem;
@@ -378,8 +384,9 @@ body {
     width: 100%;
     object-fit: cover; }
 
-.form__group:not(:last-child) {
-  margin-bottom: 2rem; }
+.form__party {
+  color: #777;
+  padding-inline-start: initial; }
 
 .form__input {
   font-size: 1.5rem;
@@ -417,16 +424,16 @@ body {
 .form__radio-group {
   width: 47%;
   display: inline-block;
-  padding: 0 3rem; }
+  padding: 0 2rem; }
 
 .form__radio-input {
   display: none; }
 
 .form__radio-label {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   cursor: pointer;
   position: relative;
-  padding-left: 3.2rem; }
+  padding-left: 2.2rem; }
 
 .form__radio-button {
   height: 2rem;
@@ -435,8 +442,8 @@ body {
   border-radius: 50%;
   display: inline-block;
   position: absolute;
-  left: 0;
-  right: 1rem;
+  left: -0.5rem;
+  right: 0.5rem;
   top: -.4rem; }
   .form__radio-button::after {
     content: "";
@@ -533,7 +540,7 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6); }
   .reserve__form {
     width: 50%;
-    padding: 6rem; }
+    padding: 5rem; }
 
 .text-box {
   position: absolute;
