--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-tertiary-light: #f76d6d;
 $color-tertiary-dark: #ba0202;
 
 $color-grey-dark: #777;
+$color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light: #fff7f9;
