--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
 	background-color: $color-grey-dark-3;
-	padding: 10rem 0;
+	padding: 5rem 2rem;
 	font-size: 1.4rem;
 	color: color-grey-light;
 
@@ -8,7 +8,7 @@
 	}
 
 	&__logo {
-		width: 15rem;
+		width: 10rem;
 		height: auto;
 	}
 
