--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,7 @@
 		border-radius: 50%;
 		z-index: 2000;
 		box-shadow: 0 1rem 3rem rgba($color-black, .2);
+		text-align: center;
 	}
 
 	&_background {
@@ -22,9 +23,13 @@
 		position: fixed;
 		top: 6.5rem;
 		right: 6.5rem;
-		background-image: radial-gradient($color-light, $color-primary);
+		background-image: radial-gradient(
+			$color-light,
+			$color-primary
+		);
 		z-index: 1000;
-		transition: transform .8s cubic-bezier(0.83, 0, 0.17, 1);
+		transition: transform .8s
+			cubic-bezier(0.83, 0, 0.17, 1);
 	}
 
 	&_nav {
@@ -38,7 +43,8 @@
 		opacity: 0;
 		width: 0;
 
-		transition: all .8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+		transition: all .8s
+			cubic-bezier(0.68, -0.6, 0.32, 1.6);
 	}
 
 	&_list {
@@ -64,7 +70,12 @@
 			color: $color-white;
 			text-decoration: none;
 			text-transform: uppercase;
-			background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
+			background-image: linear-gradient(
+				120deg,
+				transparent 0%,
+				transparent 50%,
+				$color-white 50%
+			);
 			background-size: 220%;
 			transition: all .4s;
 			display: inline-block;
@@ -90,5 +101,57 @@
 	&_checkbox:checked ~ &_nav {
 		opacity: 1;
 		width: 100%;
+	}
+
+	// Icon
+	&_icon {
+		position: relative;
+		margin-top: 3.5rem;
+
+		&,
+		&::before,
+		&::after {
+			width: 3rem;
+			height: 2px;
+			background-color: $color-grey-dark;
+			display: inline-block;
+		}
+
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			left: 0;
+			transition: all .2s;
+		}
+
+		&::before {
+			top: -.8rem;
+		}
+
+		&::after {
+			top: .8rem;
+		}
+	}
+	&_button:hover &_icon::before {
+		top: -1rem;
+	}
+
+	&_button:hover &_icon::after {
+		top: 1rem;
+	}
+
+	&_checkbox:checked + &_button &_icon {
+		background-color: transparent;
+	}
+
+	&_checkbox:checked + &_button &_icon::before {
+		top: 0;
+		transform: rotate(135deg);
+	}
+
+	&_checkbox:checked + &_button &_icon::after {
+		top: 0;
+		transform: rotate(-135deg);
 	}
 }
