--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,6 @@ html {
   @media (max-width: 56.25em) {
     html {
       font-size: 50%; } }
-  @media (max-width: 37.5em) {
-    html {
-      font-size: 10%; } }
   @media (min-width: 112.5em) {
     html {
       font-size: 75%; } }
@@ -564,7 +561,7 @@ body {
 
 .row {
   max-width: 114rem;
-  margin: 0 1em;
+  margin: 0 auto;
   text-align: center; }
   .row:not(:last-child) {
     margin-bottom: 6rem; }
