--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -27,5 +27,6 @@ $color-pink-light: #f5d0dc;
 // grid
 
 $grid-width: 114rem;
-$gutter-vertical: 6rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 2rem;
