--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	box-sizing: inherit;
 }
 
 html {
@@ -26,5 +26,10 @@ html {
 }
 
 body {
-	padding: 30px;
+	box-sizing: border-box;
+	padding: 3rem;
+
+	@include respond(tab-port) {
+		padding: 0;
+	}
 }
