--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	// font-size: 16px;
 	line-height: 1.7;
 	color: #777;
 }
@@ -22,21 +22,30 @@ body {
 		animation-name: moveLeft;
 		animation-duration: 1s;
 		animation-timing-function: ease-out;
+
+		@include respond(phone) {
+			letter-spacing: 1rem;
+			font-size: 4rem;
+		}
 	}
 
 	&-smain {
 		display: block;
-		font-size: 2.5rem;
+		font-size: 2.7rem;
 		font-weight: 700;
-		letter-spacing: 11.4px;
+		letter-spacing: 1.75rem;
 		animation-name: moveRight;
 		animation-duration: 1s;
 		animation-timing-function: ease-out;
+
+		@include respond (phone) {
+			letter-spacing: 0.5rem;
+		}
 	}
 }
 
 .heading-secondary {
-	font-size: 2.5rem;
+	font-size: 3rem;
 	text-transform: uppercase;
 	font-weight: 700;
 	background-image: linear-gradient(
@@ -50,6 +59,12 @@ body {
 	letter-spacing: 2px;
 	transition: all .2s;
 
+	@include respond (tab-port) {
+		font-size: 2.6rem;
+	}
+	@include respond (phone) {
+		font-size: 2.2rem;
+	}
 	&:hover {
 		transform: skewY(2deg) skewX(15deg) scale(1.1);
 		text-shadow: .1rem 1rem 2rem rgba($color-dark, .2);
@@ -57,13 +72,13 @@ body {
 }
 
 .heading-third {
-	font-size: 1.4rem;
+	font-size: 1.5rem;
 	font-weight: 700;
 	text-transform: uppercase;
 }
 
 .paragraph {
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 
 	&:not(:last-child) {
 		margin-bottom: 3rem;
