--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,25 +1,26 @@
-.feature-box{
+.feature-box {
 	background-color: rgba($color-white, .8);
 	font-size: 1.5;
 	padding: 2.5rem;
-	text-align:center;
+	text-align: center;
 	border-radius: 3px;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 	transition: transform .3s;
 
-	&__icon{
+	&__icon {
 		font-size: 6rem;
 		margin-bottom: .5rem;
-		background-image: linear-gradient(to right, $color-red-dark, $color-red-light);
+		background-image: linear-gradient(
+			to right,
+			$color-red-dark,
+			$color-red-light
+		);
 		display: inline-block;
 		-webkit-background-clip: text;
 		color: transparent;
 	}
 
-	&:hover{
+	&:hover {
 		transform: translateY(-1.5rem) scale(1.03);
 	}
-
-
-
 }
