--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,10 +1,16 @@
 .footer {
 	background-color: rgba($color-black, .84);
-	padding: 3.5rem 2.5rem;
-	font-size: 1.4rem;
+	padding: 4.5rem 0;
+	font-size: 1.8rem;
 	color: #fff;
 
+	@include respond(tab-port) {
+		padding: 3.5rem 0;
+	}
+
 	&__logo-box {
+		text-align: center;
+		margin-bottom: 8rem;
 	}
 
 	&__logo {
@@ -16,6 +22,11 @@
 		border-top: 1px solid $color-grey-light;
 		padding-top: 2rem;
 		display: inline-block;
+
+		@include respond(tab-port) {
+			width: 100%;
+			text-align: center;
+		}
 	}
 
 	&__ list {
@@ -57,5 +68,11 @@
 		display: inline-block;
 		width: 80%;
 		float: right;
+
+		@include respond(tab-port) {
+			width: 100%;
+			// text-align: center;
+			float: none;
+		}
 	}
 }
