--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,6 +14,11 @@
 		z-index: 2000;
 		box-shadow: 0 1rem 3rem rgba($color-black, .2);
 		text-align: center;
+
+		@include respond(tab-port) {
+			top: 4.4rem;
+			right: 4.4rem;
+		}
 	}
 
 	&_background {
@@ -30,6 +35,11 @@
 		z-index: 1000;
 		transition: transform .8s
 			cubic-bezier(0.83, 0, 0.17, 1);
+
+		@include respond(tab-port) {
+			top: 4.9rem;
+			right: 4.9rem;
+		}
 	}
 
 	&_nav {
