--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ body {
   transition: all .2s; }
   @media (max-width: 56.25em) {
     .heading-secondary {
-      font-size: 2.6rem; } }
+      font-size: 2.6rem;
+      margin: 2rem; } }
   @media (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.2rem; } }
@@ -123,10 +124,16 @@ body {
   margin-bottom: 1rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 2rem !important; }
+  margin-bottom: 3rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
-  margin-bottom: 4rem !important; }
+  margin-bottom: 6rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 4rem !important; } }
 
 .u-margin-top-big {
   margin-top: 4rem !important; }
@@ -141,15 +148,35 @@ body {
     z-index: 10;
     transition: all .2s;
     outline-offset: 0.5rem; }
+    @media (max-width: 56.25em) {
+      .composition_photo {
+        float: left;
+        position: relative;
+        width: 33.3333333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition_photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition_photo--p1 {
+          top: -1rem;
+          transform: scale(1.2); } }
     .composition_photo--p2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition_photo--p2 {
+          top: 0;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition_photo--p3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition_photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.2); } }
     .composition_photo:hover {
       outline: 0.5rem solid #82072e;
       transform: scale(1.05) translateY(-0.5rem);
@@ -243,6 +270,9 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
@@ -250,6 +280,9 @@ body {
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 1rem; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -352,6 +385,32 @@ body {
   .card__price-value {
     font-size: 4rem;
     font-weight: 10; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      border-radius: 3px;
+      background-color: #fff; }
+      .card__side {
+        height: auto;
+        position: relative;
+        border-radius: 3px;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__cta {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0);
+        width: 100%;
+        padding: 7rem 4rem 4rem 4rem; }
+      .card__price-box {
+        margin-bottom: 2rem; }
+      .card__price-value {
+        font-size: 4rem; } }
 
 .story {
   width: 75%;
@@ -363,6 +422,14 @@ body {
   padding-left: 9rem;
   font-size: 2.4rem;
   transform: skewX(-12deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem;
+      padding-left: 7rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      transform: skewX(0); } }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -373,6 +440,10 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) translateY(-3rem) skewX(12deg);
     position: relative; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        transform: skewX(0);
+        transform: translateX(-3rem) translateY(-3rem) skewX(0); } }
   .story__image {
     height: 100%;
     transform: translateX(-4rem) scale(1.2);
@@ -380,6 +451,9 @@ body {
     transition: all .5s; }
   .story__texts {
     transform: skewX(12deg); }
+    @media (max-width: 37.5em) {
+      .story__texts {
+        transform: skewX(0); } }
   .story__caption {
     position: absolute;
     top: 50%;
@@ -413,9 +487,8 @@ body {
     width: 100%;
     object-fit: cover; }
 
-.form__party {
-  color: #777;
-  padding-inline-start: initial; }
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
 
 .form__input {
   font-size: 1.5rem;
@@ -428,6 +501,9 @@ body {
   width: 90%;
   display: block;
   transition: all .3s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -442,7 +518,7 @@ body {
   font-weight: 700;
   margin-left: 2rem;
   margin-top: .7rem;
-  display: inline-block;
+  display: block;
   transition: all .3s; }
 
 .form__input:placeholder-shown + .form__label {
@@ -451,9 +527,12 @@ body {
   transform: translateY(-4rem); }
 
 .form__radio-group {
-  width: 47%;
-  display: inline-block;
-  padding: 0 2rem; }
+  width: 49%;
+  display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form__radio-input {
   display: none; }
@@ -462,7 +541,7 @@ body {
   font-size: 2.4rem;
   cursor: pointer;
   position: relative;
-  padding-left: 2.2rem; }
+  padding-left: 3.2rem; }
 
 .form__radio-button {
   height: 2rem;
@@ -577,8 +656,7 @@ body {
 
 .row {
   max-width: 114rem;
-  margin: 0 auto;
-  text-align: center; }
+  margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
@@ -608,13 +686,13 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - 2 * 2rem) / 3); }
   .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 2rem) / 3) + 2rem); }
+    width: calc(2 * ((100% - 2 * 2rem) / 3) + 2rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 2rem) / 4); }
   .row .col-2-of-4 {
-    width: calc( 2 * ((100% - 3 * 2rem) / 4) + 2rem); }
+    width: calc(2 * ((100% - 3 * 2rem) / 4) + 2rem); }
   .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
+    width: calc(3 * ((100% - 3 * 2rem) / 4) + 2 * 2rem); }
 
 .footer {
   background-color: rgba(0, 0, 0, 0.84);
@@ -627,6 +705,9 @@ body {
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 4rem; } }
   .footer__logo {
     width: 10rem;
     height: auto; }
@@ -638,7 +719,7 @@ body {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
-  .footer__ list {
+  .footer__list {
     list-style: none; }
   .footer__item {
     display: inline-block; }
@@ -660,7 +741,6 @@ body {
   .footer__copyright {
     border-top: 1px solid #fff7f9;
     padding-top: 2rem;
-    display: inline-block;
     width: 80%;
     float: right; }
     @media (max-width: 56.25em) {
@@ -790,6 +870,9 @@ body {
   background-color: #f5d0dc;
   padding: 10rem 3rem;
   margin-top: -10vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 6rem 1rem; } }
 
 .section-feature {
   padding: 12em 3rem;
@@ -799,28 +882,50 @@ body {
   transform: skewY(3deg); }
   .section-feature > * {
     transform: skewY(-3deg); }
+  @media (max-width: 56.25em) {
+    .section-feature {
+      padding: 8rem 2rem; } }
 
 .section-dishes {
   background-color: #f5d0dc;
   padding: 10rem 0 8rem 0;
   margin-top: -10vh; }
+  @media (max-width: 56.25em) {
+    .section-dishes {
+      padding: 8rem 0 6rem 0; } }
 
 .section-stories {
   padding: 6rem 0;
-  position: relative; }
+  position: relative;
+  padding: 4rem 0; }
 
 .section-reserve {
   padding: 11rem 3rem;
-  background-image: linear-gradient(to right bottom, #bf6b86, #82072e); }
+  background-image: linear-gradient(to right bottom, #bf6b86, #82072e);
+  padding: 7rem 1rem; }
 
 .reserve {
   background-image: linear-gradient(108deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 55%, transparent 55%), url(../img/fries.jpg);
-  background-size: cover;
+  background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6); }
+  @media (max-width: 75em) {
+    .reserve {
+      background-image: linear-gradient(108deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 65%, transparent 65%), url(../img/fries.jpg);
+      background-size: cover; } }
+  @media (max-width: 56.25em) {
+    .reserve {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 100%), url(../img/fries.jpg);
+      background-size: cover; } }
   .reserve__form {
     width: 50%;
     padding: 5rem; }
+    @media (max-width: 75em) {
+      .reserve__form {
+        width: 65%; } }
+    @media (max-width: 56.25em) {
+      .reserve__form {
+        width: 100%; } }
 
 .text-box {
   position: absolute;
