--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,11 +48,7 @@ body {
 	font-size: 3rem;
 	text-transform: uppercase;
 	font-weight: 700;
-	background-image: linear-gradient(
-		to right,
-		$color-red-dark,
-		$color-red-light
-	);
+	background-image: linear-gradient(to right, $color-red-dark, $color-red-light);
 	display: inline-block;
 	-webkit-background-clip: text;
 	color: transparent;
@@ -61,6 +57,7 @@ body {
 
 	@include respond (tab-port) {
 		font-size: 2.6rem;
+		margin: 2rem;
 	}
 	@include respond (phone) {
 		font-size: 2.2rem;
