--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -31,27 +31,15 @@
 			transform: rotateY(180deg);
 
 			&-1 {
-				background-image: linear-gradient(
-					to right bottom,
-					$color-secondary-light,
-					$color-secondary-dark
-				);
+				background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
 			}
 
 			&-2 {
-				background-image: linear-gradient(
-					to right bottom,
-					$color-red-light,
-					$color-red-dark
-				);
+				background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark);
 			}
 
 			&-3 {
-				background-image: linear-gradient(
-					to right bottom,
-					$color-tertiary-light,
-					$color-tertiary-dark
-				);
+				background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
 			}
 		}
 	}
@@ -70,38 +58,21 @@
 		background-size: cover;
 		height: 23rem;
 		background-blend-mode: screen;
-		-webkit-clip-path: polygon(
-			0 0,
-			100% 0,
-			100% 85%,
-			0 100%
-		);
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
 
 		&--1 {
-			background-image: linear-gradient(
-					to right bottom,
-					$color-secondary-light,
-					$color-secondary-dark
-				),
+			background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
 				url(../img/salads.jpg);
 		}
 		&--2 {
-			background-image: linear-gradient(
-					to right bottom,
-					$color-red-light,
-					$color-red-dark
-				),
+			background-image: linear-gradient(to right bottom, $color-red-light, $color-red-dark),
 				url(../img/shakes.jpg);
 		}
 		&--3 {
-			background-image: linear-gradient(
-					to right bottom,
-					$color-tertiary-light,
-					$color-tertiary-dark
-				),
+			background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
 				url(../img/pizza.jpg);
 		}
 	}
@@ -132,11 +103,7 @@
 		}
 
 		&-2 {
-			background-image: linear-gradient(
-				to right bottom,
-				rgba($color-red-light, .85),
-				rgba($color-red-dark, .85)
-			);
+			background-image: linear-gradient(to right bottom, rgba($color-red-light, .85), rgba($color-red-dark, .85));
 		}
 
 		&-3 {
@@ -162,8 +129,7 @@
 				padding: 1rem;
 
 				&:not(:last-child) {
-					border-bottom: 1px solid
-						$color-pink-light;
+					border-bottom: 1px solid $color-pink-light;
 				}
 			}
 		}
@@ -194,5 +160,46 @@
 	&__price-value {
 		font-size: 4rem;
 		font-weight: 10;
+	}
+
+	@include respond(tab-port) {
+		height: auto;
+		border-radius: 3px;
+		background-color: $color-white;
+
+		&__side {
+			height: auto;
+			position: relative;
+			border-radius: 3px;
+			box-shadow: none;
+
+			&--back {
+				transform: rotateY(0);
+				clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+			}
+		}
+
+		&:hover &__side--front {
+			transform: rotateY(0);
+		}
+
+		// Back side stylling
+
+		&__cta {
+			position: relative;
+			top: 0;
+			left: 0;
+			transform: translate(0);
+			width: 100%;
+			padding: 7rem 4rem 4rem 4rem;
+		}
+
+		&__price-box {
+			margin-bottom: 2rem;
+		}
+
+		&__price-value {
+			font-size: 4rem;
+		}
 	}
 }
