--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,12 +1,12 @@
 .form {
 	&__group:not(:last-child) {
-		// margin-bottom: 2rem;
+		margin-bottom: 2rem;
 	}
 
-	&__party {
-		color: $color-grey-dark;
-		padding-inline-start: initial;
-	}
+	// &__party {
+	// 	color: $color-grey-dark;
+	// 	padding-inline-start: initial;
+	// }
 	&__input {
 		font-size: 1.5rem;
 		font-family: inherit;
@@ -18,6 +18,10 @@
 		width: 90%;
 		display: block;
 		transition: all .3s;
+
+		@include respond(tab-port) {
+			width: 100%;
+		}
 
 		&:focus {
 			outline: none;
@@ -39,7 +43,7 @@
 		font-weight: 700;
 		margin-left: 2rem;
 		margin-top: .7rem;
-		display: inline-block;
+		display: block;
 		transition: all .3s;
 	}
 
@@ -50,10 +54,16 @@
 	}
 
 	&__radio-group {
-		width: 47%;
+		width: 49%;
 		display: inline-block;
-		padding: 0 2rem;
+
+		@include respond(tab-port) {
+			width: 100%;
+			margin-bottom: 2rem;
+			// display: inline-flex;
+		}
 	}
+
 	&__radio-input {
 		display: none;
 	}
@@ -62,7 +72,7 @@
 		font-size: $default-font-size;
 		cursor: pointer;
 		position: relative;
-		padding-left: 2.2rem;
+		padding-left: 3.2rem;
 	}
 
 	&__radio-button {
