--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
 	background-color: rgba($color-black, .84);
+	// margin: 0 2rem;
 	padding: 4.5rem 0;
 	font-size: 1.8rem;
 	color: #fff;
@@ -11,6 +12,9 @@
 	&__logo-box {
 		text-align: center;
 		margin-bottom: 8rem;
+		@include respond(tab-port) {
+			margin-bottom: 4rem;
+		}
 	}
 
 	&__logo {
@@ -29,7 +33,7 @@
 		}
 	}
 
-	&__ list {
+	&__list {
 		list-style: none;
 	}
 
@@ -65,7 +69,7 @@
 	&__copyright {
 		border-top: 1px solid $color-grey-light;
 		padding-top: 2rem;
-		display: inline-block;
+		// display: inline-block;
 		width: 80%;
 		float: right;
 
