--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,7 +1,7 @@
 .row {
 	max-width: $grid-width;
 	margin: 0 auto;
-	text-align: center;
+	// text-align: center;
 
 	&:not(:last-child) {
 		margin-bottom: $gutter-vertical;
@@ -44,9 +44,7 @@
 	}
 
 	.col-2-of-3 {
-		width: calc(
-			2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
-		);
+		width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
 	}
 
 	.col-1-of-4 {
@@ -54,14 +52,10 @@
 	}
 
 	.col-2-of-4 {
-		width: calc(
-			2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
-		);
+		width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
 	}
 
 	.col-3-of-4 {
-		width: calc(
-			3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
-		);
+		width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
 	}
 }
