--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
 	background-color: $color-pink-light;
 	padding: 10rem 3rem;
 	margin-top: -10vh;
+
+	@include respond(tab-port) {
+		padding: 6rem 1rem;
+	}
 }
 
 .section-feature {
@@ -16,35 +20,71 @@
 	& > * {
 		transform: skewY(-3deg);
 	}
+
+	@include respond(tab-port) {
+		padding: 8rem 2rem;
+	}
 }
 
 .section-dishes {
 	background-color: $color-pink-light;
 	padding: 10rem 0 8rem 0;
 	margin-top: -10vh;
+
+	@include respond(tab-port) {
+		padding: 8rem 0 6rem 0;
+	}
 }
 
 .section-stories {
 	padding: 6rem 0;
 	position: relative;
+
+	padding: 4rem 0;
 }
 
 .section-reserve {
 	padding: 11rem 3rem;
 	background-image: linear-gradient(to right bottom, $color-light, $color-dark);
+
+	padding: 7rem 1rem;
 }
 
 .reserve {
 	background-image: linear-gradient(108deg, rgba($color-white, .8) 0%, rgba($color-white, .7) 55%, transparent 55%),
 		url(../img/fries.jpg);
-	background-size: cover;
+	background-size: 100%;
 	border-radius: 3px;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, .6);
 
 	// height: 60rem;
 
+	@include respond(tab-land) {
+		background-image: linear-gradient(
+				108deg,
+				rgba($color-white, .8) 0%,
+				rgba($color-white, .7) 65%,
+				transparent 65%
+			),
+			url(../img/fries.jpg);
+		background-size: cover;
+	}
+
+	@include respond(tab-port) {
+		background-image: linear-gradient(to right, rgba($color-white, .8) 0%, rgba($color-white, .7) 100%),
+			url(../img/fries.jpg);
+		background-size: cover;
+	}
 	&__form {
 		width: 50%;
 		padding: 5rem;
+
+		@include respond(tab-land) {
+			width: 65%;
+		}
+
+		@include respond(tab-port) {
+			width: 100%;
+		}
 	}
 }
