--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,7 +9,9 @@
 	position: relative;
 }
 
-@media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+@media (min-resolution: 192dpi) and (min-width: 37.5em),
+	(-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+	(min-width: 125em) {
 	background-image: linear-gradient(to right bottom, rgba(191, 107, 134, 0.5), rgba(204, 29, 84, 0.5)),
 		url(../img/ffood.jpg);
 }
